# transaction

./: .gitignore  CLAUDE.md  README.md  conf_debug.txt  docker-compose.yml  pyproject.toml  requirements.txt
backtest/: broker_sim.py  engine.py  monte_carlo.py  precompute.py  reporter.py
config/: __init__.py  risk_params.py  settings.py
data/: __init__.py
data/collector/: akshare_fetcher.py  cleaner.py  scheduler.py
data/models/: __init__.py  bar.py
data/storage/: clickhouse_client.py  postgres_client.py
export/: portfolio.json  trades.json  watchlist.json
live/: qmt_adapter.py  trader.py
monitor/: app.py  data_service.py
monitor/components/: charts.py  metrics.py
monitor/pages/: dashboard.py  positions.py  signals.py
notify/: dingtalk.py  wechat.py
params_history/: 20260704_092147_post-fix-v1.json
risk/: circuit_breaker.py  position_mgr.py  risk_engine.py
scripts/: backfill_baostock.py  backtest_selector.py  check_holds.py  daily_signal.py  daily_signal_qmt.py  daily_workflow.py  download_history.py  download_incremental.py  emergency_stop.py  export_data.py  init_clickhouse.sql  init_db.sql  init_postgres.sql  intraday_monitor.py  monday_signal.py  optimize_params.py  optimizer.py  position_tracker.py  positions.json  pre_market_check.py  precompute_cache.py  qmt_connect_test.py  qmt_diag.py  resume_download.py  run_backtest.py  segment_test.py  signals_today.json  snapshot_params.py  trade_log.json  validate.py
strategy/: regime_engine.py
tests/: test_backtest.py  test_data_collector.py  test_factors.py  test_risk.py
(+12 files in other folders)
