[project]
name = "a-share-quant"
version = "0.1.0"
description = "A-Share Quantitative Trading System"
requires-python = ">=3.12"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires running services)",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]
